# QGate

AUV-Tasks-Unclean/: CMakeLists.txt
AUV-Tasks-Unclean/src/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake  gatetest  gatetest2  test.cpp  test2.cpp
AUV-Tasks-Unclean/src/atomic_configure/: _setup_util.py
AUV-Tasks-Unclean/src/catkin_generated/: generate_cached_setup.py  setup_cached.sh
AUV-Tasks-Unclean/src/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
AUV-Tasks-Unclean/src/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
AUV-Tasks-Unclean/src/gtest/gtest/: CTestTestfile.cmake  Makefile
